syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
//import "google/protobuf/timestamp.proto";
//import "validate/validate.proto"; use buf first
option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//系统-管理员
service SysAdmin {
  //系统-管理员-创建一条数据
  rpc CreateSysAdmin(CreateSysAdminReq) returns (CreateSysAdminReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_admin/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //系统-管理员-更新一条数据
  rpc UpdateSysAdmin(UpdateSysAdminReq) returns (UpdateSysAdminReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_admin/update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //系统-管理员-更新状态
  rpc UpdateSysAdminStatus(UpdateSysAdminStatusReq) returns (UpdateSysAdminStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_admin/update/status"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //系统-管理员-删除一条数据
  rpc DeleteSysAdmin(DeleteSysAdminReq) returns (DeleteSysAdminReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_admin/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //系统-管理员-单条数据查询
  rpc GetSysAdminInfo(GetSysAdminInfoReq) returns (GetSysAdminInfoReply) {
    option (google.api.http) = {get: "/admin/v1/sys_admin/info"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //系统-管理员-列表数据查询
  rpc GetSysAdminList(GetSysAdminListReq) returns (GetSysAdminListReply) {
    option (google.api.http) = {get: "/admin/v1/sys_admin/list"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
}
//系统-管理员信息
message SysAdminInfo {
  string id = 1; // id
	string tenantId = 2; // 租户Id
	string username = 3; // 用户名
	string password = 4; // 密码
	string nickname = 5; // 昵称
	string avatar = 6; // 头像
	string email = 7; // 邮件
	int32 sex = 8; // 性别
	string mobile = 9; // 手机号
	string roleId = 10; // 角色Id
	string deptId = 11; // 部门
	string postId = 12; // 岗位
	int32 status = 13; // 状态(-1禁用,1开启)
	string createdAt = 14; // 创建时间
	string updatedAt = 15; // 更新时间
}

//请求-系统-管理员-创建一条数据
message CreateSysAdminReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["username","password","status"]
    }
  };
  string tenantId = 1 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 租户Id
	string username = 2 [(buf.validate.field).string={min_len: 1}]; // 用户名
	string password = 3 [(buf.validate.field).string={min_len: 1}]; // 密码
	string nickname = 4 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 昵称
	string avatar = 5 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 头像
	string email = 6 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 邮件
	int32 sex = 7 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED]; // 性别
	string mobile = 8 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 手机号
	string roleId = 9 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 角色Id
	string deptId = 10 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 部门
	string postId = 11 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 岗位
	int32 status = 12 ; // 状态(-1禁用,1开启)
}

//响应-系统-管理员-创建一条数据
message CreateSysAdminReply {
  	string id = 1; // id
}

//请求-系统-管理员-更新一条数据
message UpdateSysAdminReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id","username","password","status"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
	string tenantId = 2 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 租户Id
	string username = 3 [(buf.validate.field).string={min_len: 1}]; // 用户名
	string password = 4 [(buf.validate.field).string={min_len: 1}]; // 密码
	string nickname = 5 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 昵称
	string avatar = 6 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 头像
	string email = 7 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 邮件
	int32 sex = 8 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED]; // 性别
	string mobile = 9 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 手机号
	string roleId = 10 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 角色Id
	string deptId = 11 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 部门
	string postId = 12 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 岗位
	int32 status = 13 ; // 状态(-1禁用,1开启)
}

//响应-系统-管理员-更新一条数据
message UpdateSysAdminReply {}

//请求-系统-管理员-更新状态
message UpdateSysAdminStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id","status"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
	int32 status = 2 ; // 状态(-1禁用,1开启)
}

//响应-系统-管理员-更新状态
message UpdateSysAdminStatusReply {}

//请求-系统-管理员-删除一条数据
message DeleteSysAdminReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
}

//响应-系统-管理员-删除一条数据
message DeleteSysAdminReply {}

//请求-系统-管理员-单条数据查询
message GetSysAdminInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
}

//响应-系统-管理员-单条数据查询
message GetSysAdminInfoReply {
  SysAdminInfo info = 1;
}

//请求-系统-管理员-列表数据查询
message GetSysAdminListReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "page",
        "pageSize"
      ]
    }
  };
  int32 page = 1[(buf.validate.field).int32={gte: 1}]; //页码
  int32 pageSize = 2[(buf.validate.field).int32={gte: 1, lte: 1000}]; //页数
}

//响应-系统-管理员-列表数据查询
message GetSysAdminListReply {
  int32 total = 1; //总数
  repeated SysAdminInfo list = 2; // 列表数据
}

